// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot for a new list 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="name"
      >
        Name
      </label>
      <div
        class="control"
      >
        <input
          class="input"
          data-testid="name"
          name="name"
          value=""
        />
      </div>
      <p
        class="help is-danger"
        data-testid="nameErrors"
      />
    </div>
    <div
      class="field is-grouped"
    >
      <p
        class="control"
      >
        <button
          class="button"
          data-testid="submit"
          type="submit"
        >
          CREATE
        </button>
      </p>
      <p
        class="control"
      >
        <button
          class="button"
          data-testid="cancel"
          type="button"
        >
          CANCEL
        </button>
      </p>
    </div>
  </form>
</DocumentFragment>
`;

exports[`should match the snapshot for an existing list 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="name"
      >
        Name
      </label>
      <div
        class="control"
      >
        <input
          class="input"
          data-testid="name"
          name="name"
          value="list name"
        />
      </div>
      <p
        class="help is-danger"
        data-testid="nameErrors"
      />
    </div>
    <div>
      <div
        class="is-flex"
      >
        <div
          class="is-flex-grow-4"
        >
          <span
            class="label"
          >
            List Items
          </span>
        </div>
      </div>
      <div
        class="dnd-container"
      >
        <div
          class="list-button"
        >
          <button
            class="button is-small"
            data-testid="addNew"
            type="button"
          >
            <span
              class="icon is-small"
            >
              <i
                class="fas fa-plus"
              />
            </span>
            <span>
              Add
            </span>
          </button>
        </div>
        <div
          class="dnd-list"
          data-rbd-droppable-context-id="0"
          data-rbd-droppable-id="2"
        >
          <div
            aria-describedby="rbd-hidden-text-0-hidden-text-0"
            class="is-flex dnd-item"
            data-rbd-drag-handle-context-id="0"
            data-rbd-drag-handle-draggable-id="5"
            data-rbd-draggable-context-id="0"
            data-rbd-draggable-id="5"
            data-testid="draggable5"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <a
              class="is-flex-grow-4"
              data-testid="editListItem5"
              href="/lists/2/items/5/edit"
            >
              <div>
                <span
                  class="has-text-black"
                >
                  item 5 title
                </span>
              </div>
            </a>
            <div
              class="is-justify-content-flex-end"
            >
              <center>
                <a
                  class="has-text-black delete"
                  data-testid="deleteListItem5"
                  href="/lists/2/items/5/delete"
                />
              </center>
            </div>
          </div>
          <div
            aria-describedby="rbd-hidden-text-0-hidden-text-0"
            class="is-flex dnd-item"
            data-rbd-drag-handle-context-id="0"
            data-rbd-drag-handle-draggable-id="6"
            data-rbd-draggable-context-id="0"
            data-rbd-draggable-id="6"
            data-testid="draggable6"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <a
              class="is-flex-grow-4"
              data-testid="editListItem6"
              href="/lists/2/items/6/edit"
            >
              <div>
                <span
                  class="has-text-black"
                >
                  item 6 title
                </span>
              </div>
            </a>
            <div
              class="is-justify-content-flex-end"
            >
              <center>
                <a
                  class="has-text-black delete"
                  data-testid="deleteListItem6"
                  href="/lists/2/items/6/delete"
                />
              </center>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="field is-grouped"
    >
      <p
        class="control"
      >
        <button
          class="button"
          data-testid="submit"
          type="submit"
        >
          SAVE
        </button>
      </p>
      <p
        class="control"
      >
        <button
          class="button"
          data-testid="cancel"
          type="button"
        >
          CANCEL
        </button>
      </p>
      <p
        class="control"
      >
        <button
          class="button is-danger"
          data-testid="delete"
          type="button"
        >
          DELETE
        </button>
      </p>
    </div>
  </form>
</DocumentFragment>
`;
